--- a/WebContent/VAADIN/themes/reindeer/common/common.css
+++ b/WebContent/VAADIN/themes/reindeer/common/common.css
@@ -20,7 +20,8 @@
 .v-popupview-popup button,
 .v-popupview-popup textarea,
 .v-filterselect-suggestpopup,
-.v-datefield-popup {
+.v-datefield-popup,
+.v-contextmenu {
 	font-family: Arial, Helvetica, Tahoma, Verdana, sans-serif;
 	font-size: 12px;
 	line-height: normal;
@@ -44,7 +45,8 @@
 .v-sa .v-popupview-popup button,
 .v-sa .v-popupview-popup textarea,
 .v-sa .v-filterselect-suggestpopup,
-.v-sa .v-datefield-popup {
+.v-sa .v-datefield-popup,
+.v-sa .v-contextmenu {
 	font-family: Helvetica, Arial, "Lucida Grande", Geneva, Tahoma, Verdana, sans-serif;
 }
 .v-errorindicator {
@@ -86,4 +88,38 @@
 	font-size: 13px;
 	font-weight: bold;
 	margin: 1px 0 4px 0;
+}
+.v-contextmenu {
+	background: #f8f8f9;
+	border: none;
+	border-radius: 3px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	-o-border-radius: 3px;
+	overflow: hidden;
+	padding: 4px 0;
+}
+.v-contextmenu .gwt-MenuItem {
+	padding: 1px 8px;
+	height: 16px;
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	cursor: default;
+}
+.v-contextmenu .gwt-MenuItem .v-icon {
+	margin-right: 3px;
+}
+.v-contextmenu .gwt-MenuItem-selected {
+	background: transparent repeat-x;
+	background-image: url(../common/img/sel-bg.png); /** sprite-ref: verticals; sprite-alignment: repeat */
+	color: #fff;
+	text-shadow: #3b5a7a 0 1px 0;
+}
+.v-ie .v-contextmenu .gwt-MenuItem-selected {
+	background-image: url(../common/img/sel-bg.png);
+}
+.v-contextmenu .gwt-MenuItem-selected div {
+	background: transparent;
+	cursor: default;
 }
