--- a/WebContent/VAADIN/themes/reindeer/datefield/datefield.css
+++ b/WebContent/VAADIN/themes/reindeer/datefield/datefield.css
@@ -222,13 +222,15 @@ td.v-datefield-calendarpanel-nextyear {
 	border-right: none;
 	height: 18px;
 }
-.v-ff .v-datefield-popupcalendar .v-datefield-textfield{
+.v-ff .v-datefield-popupcalendar .v-datefield-textfield,
+.v-op .v-datefield-popupcalendar .v-datefield-textfield {
+	border-radius-topright: 0;
+	border-radius-bottomright: 0;
 	-moz-border-radius-topright: 0;
 	-moz-border-radius-bottomright: 0;
 }
 .v-sa .v-datefield-popupcalendar .v-datefield-textfield,
-.v-ff35 .v-datefield-popupcalendar .v-datefield-textfield,
-.v-op .v-datefield-popupcalendar .v-datefield-textfield {
+.v-ff35 .v-datefield-popupcalendar .v-datefield-textfield {
 	border-width: 0 0 0 3px;
 }
 .v-datefield-popupcalendar .v-datefield-button {
