"poro" theme update: table styles mostly done, some small glitches in IE
svn changeset:7782 branch:6.0

--- a/WebContent/VAADIN/themes/reindeer/common/common.css
+++ b/WebContent/VAADIN/themes/reindeer/common/common.css
@@ -100,7 +100,7 @@
 	padding: 4px 0;
 }
 .v-contextmenu .gwt-MenuItem {
-	padding: 1px 8px;
+	padding: 1px 12px 1px 8px;
 	height: 16px;
 	user-select: none;
 	-moz-user-select: none;
