--- a/WebContent/VAADIN/themes/default/styles.css
+++ b/WebContent/VAADIN/themes/default/styles.css
@@ -1200,10 +1200,10 @@
 	text-align: center;
 }
 /* row in column selector */
-.v-on div {
+.v-on {
 	
 }
-.v-off div {
+.v-off {
 	color: #ddd;
 }
 
