fixed broken theme in addressbook example
svn changeset:7786 branch:6.0

--- a/WebContent/VAADIN/themes/contacts/styles.css
+++ b/WebContent/VAADIN/themes/contacts/styles.css
@@ -82,7 +82,7 @@
 }
  
 .v-table-cell-content {
-      padding: 2px 0 2px 3px;
+      padding: 2px 6px 2px 3px;
       line-height: normal;
       font-size: 85%;
 }
